--- a/Mock2Q6/styles.css
+++ b/Mock2Q6/styles.css
@@ -1,3 +1,28 @@
-#input-box {
-    margin-bottom: 10px;
-  }
+#modalOverlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 9999;
+}
+
+#modalContent {
+  background-color: #fff;
+  width: 400px;
+  padding: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#closeModalBtn {
+  margin-top: 10px;
+}
+
+body.modal-open {
+  overflow: hidden;
+}
